Unique room Features alignment fixed

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,6 +48,7 @@ h2 {
 .small-heading {
   h1 {
     font-size: 3.5rem;
+    letter-spacing: -20px;
     @include media-breakpoint-up(md) {
       font-size: 9rem;
       line-height: 10rem;
@@ -58,6 +59,7 @@ h2 {
     }
     @media (min-width: 1340px) {
       font-size: 12.5rem;
+      letter-spacing: -40px;
     }
   }
 }
